[package]
name = "east"
version = "0.2.0"
edition = "2021"
description = "Full-stack web library for island architecture."
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sycamore = { version = "0.8", features = ["ssr", "hydrate"] }

east-macro = { version = "0.2", path = "macro" }

[workspace]
members = [
  "macro",

  "examples/counter",
]