[package]
name = "east"
version = "0.3.0-dev"
edition = "2021"
description = "Full-stack web library for island architecture."
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sycamore = { version = "0.8", features = ["ssr", "hydrate"] }
web-sys = "0.3"
wasm-bindgen = "0.2"

east-macro = { version = "0.3.0-dev", path = "macro" }

[workspace]
members = [
  "macro",
  "build",
  "build/helper",

  "examples/counter",
]