[package]
name = "east-macro"
version = "0.3.0-dev"
edition = "2021"
description = "Macros for East"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "^1.0", features = ["span-locations"] }
proc-macro-crate = "1"
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "extra-traits"] }